# GL-

./: CMakeLists.txt  LICENSE  README.md
examples/: camwindow.h  cubebox.cpp  example1.cpp  framebuffer.cpp  geometricshader.cpp  glad.c  lighting.cpp  model_loading.cpp  shaderdebugger.cpp  transformation.cpp
glad/: glad.h
images/: light.mtl  monkey.mtl
libs/assimp/: assimp-vc140-mt.lib
resources/images/: cube.fs  cube.vs  cubedata.data  fragshader.fs  framebuffer1.fs  gsexample.fs  gsexample.gs  gsexample.vs  modelloading.fs  modelloading.vs  myfirst.mtl  skybox-compiled.fs  skybox-compiled.vs  skybox.data
resources/shaders/: debug_normal.gs  debug_normal.vs  fragment.fs  lightin-compiled.fs  lighting-compiled.fs  lighting.fs
shaders/: fragment.f  vertex.v
src/: basic_types.hpp  camera.hpp  debug.hpp  gerror.hpp  gl.hpp  glsl_debug_include.h  gwindow.hpp  lighting.hpp  mesh.hpp  model.hpp  stb_image.h
